--- a/wishlist/src/app/home.module/games-container/games-container.component.html
+++ b/wishlist/src/app/home.module/games-container/games-container.component.html
@@ -6,103 +6,7 @@
 
       <div class="row">
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top"
-                 src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">
-                <p>Saints Row 2</p>
-              </h4>
-              <h5>$24.99</h5>
-            </div>
-            <div class="card-footer" style="background-color: #283845;">
-              <button type="button" class="btn btn-success btn-block">Add to cart</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top"
-                 src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">
-                <p>Saints Row 2</p>
-              </h4>
-              <h5>$24.99</h5>
-            </div>
-            <div class="card-footer" style="background-color: #283845;">
-              <button type="button" class="btn btn-success btn-block">Add to cart</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top"
-                 src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">
-                <p>Saints Row 2</p>
-              </h4>
-              <h5>$24.99</h5>
-            </div>
-            <div class="card-footer" style="background-color: #283845;">
-              <button type="button" class="btn btn-success btn-block">Add to cart</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top"
-                 src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">
-                <p>Saints Row 2</p>
-              </h4>
-              <h5>$24.99</h5>
-            </div>
-            <div class="card-footer" style="background-color: #283845;">
-              <button type="button" class="btn btn-success btn-block">Add to cart</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top"
-                 src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">
-                <p>Saints Row 2</p>
-              </h4>
-              <h5>$24.99</h5>
-            </div>
-            <div class="card-footer" style="background-color: #283845;">
-              <button type="button" class="btn btn-success btn-block">Add to cart</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top"
-                 src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" alt="">
-            <div class="card-body">
-              <h4 class="card-title">
-                <p>Saints Row 2</p>
-              </h4>
-              <h5>$24.99</h5>
-            </div>
-            <div class="card-footer" style="background-color: #283845;">
-              <button type="button" class="btn btn-success btn-block">Add to cart</button>
-            </div>
-          </div>
-        </div>
-
-
+      <app-game *ngFor="let game of games" [game]="game" class="col-lg-3 col-md-6 mb-4"></app-game>
 
       </div>
       <!-- /.row -->
