Add pagination component

--- a/wishlist/src/app/home.module/games-container/games-container.component.html
+++ b/wishlist/src/app/home.module/games-container/games-container.component.html
@@ -21,4 +21,4 @@
 </div>
 <!-- /.container -->
 
-<app-pagination></app-pagination>
+<app-pagination [currentPage]="currentPage" [totalPageCount]="getTotalPageCount()" [showPagesCount]="showPagesCount"></app-pagination>
