--- a/wishlist/src/app/home.module/pagination/pagination.component.html
+++ b/wishlist/src/app/home.module/pagination/pagination.component.html
@@ -3,7 +3,7 @@
     <div class="col">
       <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-end">
-          <li class="page-item disabled">
+<!--          <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1" aria-disabled="true" style="color: #003049"><span aria-hidden="true">&laquo;</span></a>
           </li>
           <li class="page-item" style="background-color: #28a745;"><a class="page-link" href="#" style="color: #003049; background-color: #28a745;">1</a></li>
@@ -11,7 +11,19 @@
           <li class="page-item"><a class="page-link" href="#" style="color: #003049">3</a></li>
           <li class="page-item">
             <a class="page-link" href="#" style="color: #003049"><span aria-hidden="true">&raquo;</span></a>
+          </li>-->
+
+          <li class="page-item" [class.disabled]="!showBackward">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true" style="color: #003049"><span aria-hidden="true">&laquo;</span></a>
           </li>
+          <li class="page-item" *ngFor="let number of pageNumbers">
+            <a class="page-link" href="#" style="color: #003049" >{{number}}</a>
+          </li>
+          <li class="page-item" [class.disabled]="!showForward">
+            <a class="page-link" href="#" style="color: #003049"><span aria-hidden="true">&raquo;</span></a>
+          </li>
+
+
         </ul>
       </nav>
     </div>
