--- a/wishlist/src/app/home.module/pagination/pagination.component.html
+++ b/wishlist/src/app/home.module/pagination/pagination.component.html
@@ -13,16 +13,15 @@
             <a class="page-link" href="#" style="color: #003049"><span aria-hidden="true">&raquo;</span></a>
           </li>-->
 
-          <li class="page-item" [class.disabled]="!showBackward">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true" style="color: #003049"><span aria-hidden="true">&laquo;</span></a>
+          <li class="page-item" [class.disabled]="!showForward">
+            <button class="page-link" (click)="setCurrentPage(currentPage-1)" ><span aria-hidden="true">&laquo;</span></button>
           </li>
           <li class="page-item" *ngFor="let number of pageNumbers">
-            <a class="page-link" href="#" style="color: #003049" >{{number}}</a>
+            <button class="page-link" [class.selected]="currentPage == number" (click)="setCurrentPage(number)" aria-pressed="false">{{number}}</button>
           </li>
           <li class="page-item" [class.disabled]="!showForward">
-            <a class="page-link" href="#" style="color: #003049"><span aria-hidden="true">&raquo;</span></a>
+            <button class="page-link" (click)="setCurrentPage(currentPage+1)"><span aria-hidden="true">&raquo;</span></button>
           </li>
-
 
         </ul>
       </nav>
