--- a/wishlist/src/app/home.module/pagination/pagination.component.html
+++ b/wishlist/src/app/home.module/pagination/pagination.component.html
@@ -13,7 +13,7 @@
             <a class="page-link" href="#" style="color: #003049"><span aria-hidden="true">&raquo;</span></a>
           </li>-->
 
-          <li class="page-item" [class.disabled]="!showForward">
+          <li class="page-item" [class.disabled]="!showBackward">
             <button class="page-link" (click)="setCurrentPage(currentPage-1)" ><span aria-hidden="true">&laquo;</span></button>
           </li>
           <li class="page-item" *ngFor="let number of pageNumbers">
