--- a/wishlist/src/app/home.module/game/game.component.html
+++ b/wishlist/src/app/home.module/game/game.component.html
@@ -8,6 +8,7 @@
     <h5>${{game.price}}</h5>
   </div>
   <div class="card-footer" style="background-color: #283845;">
-    <button type="button" class="btn btn-success btn-block">Add to cart</button>
+    <h5 *ngIf="isInCart">In Cart</h5>
+    <button *ngIf="!isInCart" (click)="select()" type="button" class="btn btn-success btn-block">Add to cart</button>
   </div>
 </div>
