--- a/wishlist/src/app/home.module/games-container/games-container.component.html
+++ b/wishlist/src/app/home.module/games-container/games-container.component.html
@@ -6,7 +6,12 @@
 
       <div class="row">
 
-      <app-game *ngFor="let game of games" [game]="game" class="col-lg-3 col-md-6 mb-4"></app-game>
+      <app-game *ngFor="let game of games"
+                [game]="game.info"
+                [isInCart]="game.isInCart"
+                (gameSelected)="onGameSelected($event)"
+                class="col-lg-3 col-md-6 mb-4">
+      </app-game>
 
       </div>
       <!-- /.row -->
