--- a/wishlist/src/app/home.module/header/header.component.html
+++ b/wishlist/src/app/home.module/header/header.component.html
@@ -2,13 +2,17 @@
   <div class="container">
     <a class="navbar-brand" href="#">My awesome shop</a>
     <form class="form-inline">
-      <button class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModalLong" type="button"><i class="fa" style="font-size:24px">&#xf07a;</i> 5</button>
+      <button class="btn" [ngClass]="games.length == 0 ? 'btn-outline-success' : 'btn-success'"
+              [disabled]="games.length == 0"
+              data-toggle="modal"
+              data-target="#exampleModalLong"
+              type="button"><i class="fa" style="font-size:24px">&#xf07a;</i> {{games.length}}</button>
     </form>
 
   </div>
 </nav>
 
-<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal fade" id="exampleModalLong" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -16,38 +20,19 @@
       </div>
       <div class="modal-body">
 
-        <div class="card mb-3" style="max-width: 540px;">
+        <div *ngFor="let game of games" class="card mb-3" style="max-width: 540px;">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <img src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" class="card-img" alt="...">
+              <img src="{{game.coverUrl}}" class="card-img" alt="...">
             </div>
             <div class="col-md-6">
               <div class="card-body">
-                <h5 class="card-title">Saints Row 2</h5>
-                <p class="card-text">$24.99</p>
+                <h5 class="card-title">{{game.name}}</h5>
+                <p class="card-text">${{game.price}}</p>
               </div>
             </div>
             <div class="col-md-2 pr-2 pt-1">
-              <button type="button" class="close" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row no-gutters">
-            <div class="col-md-4">
-              <img src="http://s.gama-gama.ru/fullsize/e56c325f30f3d01b0f0f1ea8d5b59d70.jpg" class="card-img" alt="...">
-            </div>
-            <div class="col-md-6">
-              <div class="card-body">
-                <h5 class="card-title">Saints Row 2</h5>
-                <p class="card-text">$24.99</p>
-              </div>
-            </div>
-            <div class="col-md-2 pr-2 pt-1">
-              <button type="button" class="close" aria-label="Close">
+              <button type="button" class="close" aria-label="Close" (click)="removeGameFromCart(game.id)">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
