Fix header component

--- a/wishlist/src/app/home.module/header/header.component.html
+++ b/wishlist/src/app/home.module/header/header.component.html
@@ -41,7 +41,7 @@
 
       </div>
       <div class="modal-footer justify-content-center">
-        <button type="button" class="btn btn-danger">Confirm purchase</button>
+        <button type="button" class="btn btn-danger" [disabled]="games.length == 0">Confirm purchase</button>
       </div>
     </div>
   </div>
