Extract css to .sass-files

--- a/wishlist/src/app/home.module/search/search.component.html
+++ b/wishlist/src/app/home.module/search/search.component.html
@@ -5,8 +5,7 @@
         <div class="input-group-prepend">
           <button (click)="search(searchInput.value)" class="btn btn-outline-success" type="button">Search</button>
         </div>
-        <input (keydown.enter)="search(searchInput.value)" type="text" class="form-control" placeholder="" aria-label="Example text with button addon"
-               aria-describedby="button-addon1" #searchInput>
+        <input (keydown.enter)="search(searchInput.value)" type="text" class="form-control green-outline-focus" placeholder="" #searchInput>
       </div>
     </div>
   </div>
