--- a/wishlist/src/app/app.component.html
+++ b/wishlist/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
 <!-- Footer -->
-<footer class="py-5 bg-dark" style="background-color: #003049">
+<footer class="py-5 bg-dark">
   <div class="container">
     <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
   </div>
