--- a/wishlist/src/app/home.module/game/game.component.html
+++ b/wishlist/src/app/home.module/game/game.component.html
@@ -1,13 +1,13 @@
 <div class="card h-100">
   <img class="card-img-top"
-       src="{{game.coverUrl}}" alt="" width="200" height="286">
+       src="{{game.coverUrl}}" alt="">
   <div class="card-body">
     <h4 class="card-title">
       <p>{{game.name}}</p>
     </h4>
     <h5>${{game.price}}</h5>
   </div>
-  <div class="card-footer" style="background-color: #283845;">
+  <div class="card-footer">
     <h5 *ngIf="isInCart">In Cart</h5>
     <button *ngIf="!isInCart" (click)="select()" type="button" class="btn btn-success btn-block">Add to cart</button>
   </div>
