--- a/wishlist/src/app/home.module/game/game.component.html
+++ b/wishlist/src/app/home.module/game/game.component.html
@@ -1,4 +1,4 @@
-<div class="card h-100">
+<div class="card h-100 card-size">
   <img class="card-img-top"
        src="{{game.coverUrl}}" alt="">
   <div class="card-body">
