Fix long games` names

--- a/wishlist/src/app/home.module/game/game.component.sass
+++ b/wishlist/src/app/home.module/game/game.component.sass
@@ -13,3 +13,10 @@
 .in-cart
   color: #ffffff
   text-align: center
+
+.card-name
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
+  max-width: 200px
+  text-align: center
