--- a/wishlist/src/app/home.module/game/game.component.html
+++ b/wishlist/src/app/home.module/game/game.component.html
@@ -2,9 +2,9 @@
   <img class="card-img-top"
        src="{{game.coverUrl}}" alt="">
   <div class="card-body">
-    <h4 class="card-title">
-      <p>{{game.name}}</p>
-    </h4>
+    <h5 class="card-title">
+      <p class="card-name">{{game.name}}</p>
+    </h5>
     <h5>${{game.price}}</h5>
   </div>
   <div class="card-footer">
