--- a/wishlist/src/app/home.module/header/header.component.html
+++ b/wishlist/src/app/home.module/header/header.component.html
@@ -4,45 +4,40 @@
     <form class="form-inline">
       <button [ngClass]="isCartEmpty() ? 'btn btn-outline-success' : ' btn btn-success'"
               [disabled]="isCartEmpty()"
-              data-toggle="modal"
-              data-target="#exampleModalLong"
+              (click)="openCart(content)"
               type="button"><i class="fa cart ico">&#xf07a;</i> {{games.length}}</button>
     </form>
 
   </div>
 </nav>
 
-<div class="modal fade" id="exampleModalLong" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Basket</h5>
-      </div>
-      <div class="modal-body">
+<ng-template #content>
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLongTitle">Basket</h5>
+  </div>
+  <div class="modal-body">
 
-        <div *ngFor="let game of games" class="card mb-3 game-card">
-          <div class="row no-gutters">
-            <div class="col-md-4">
-              <img src="{{game.coverUrl}}" class="card-img" alt="...">
-            </div>
-            <div class="col-md-6">
-              <div class="card-body">
-                <h5 class="card-title">{{game.name}}</h5>
-                <p class="card-text">${{game.price}}</p>
-              </div>
-            </div>
-            <div class="col-md-2 pr-2 pt-1">
-              <button type="button" class="close" aria-label="Close" (click)="removeGameFromCart(game.id)">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
+    <div *ngFor="let game of games" class="card mb-3 game-card">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="{{game.coverUrl}}" class="card-img" alt="...">
+        </div>
+        <div class="col-md-6">
+          <div class="card-body">
+            <h5 class="card-title">{{game.name}}</h5>
+            <p class="card-text">${{game.price}}</p>
           </div>
         </div>
-
-      </div>
-      <div class="modal-footer justify-content-center">
-        <button type="button" class="btn btn-danger" [disabled]="isCartEmpty()">Confirm purchase</button>
+        <div class="col-md-2 pr-2 pt-1">
+          <button type="button" class="close" aria-label="Close" (click)="removeGameFromCart(game.id)">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
       </div>
     </div>
+
   </div>
-</div>
+  <div class="modal-footer justify-content-center">
+    <button type="button" class="btn btn-danger">Confirm purchase</button>
+  </div>
+</ng-template>
