--- a/wishlist/src/app/home.module/header/header.component.html
+++ b/wishlist/src/app/home.module/header/header.component.html
@@ -13,7 +13,7 @@
 
 <ng-template #content>
   <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLongTitle">Basket</h5>
+    <h5 class="modal-title" id="exampleModalLongTitle">Shopping cart</h5>
   </div>
   <div class="modal-body">
 
