--- a/wishlist/src/styles.sass
+++ b/wishlist/src/styles.sass
@@ -4,3 +4,16 @@ $app-dark: #283845
   &:focus
     box-shadow: 0 0 0 0.2rem rgba(40,167,69,.5)
     border-color: #28a745
+
+html
+  height: 100%
+  box-sizing: border-box
+  &:before, &:after
+    box-sizing: inherit
+
+body
+  position: relative
+  margin: 0
+  padding-bottom: 6rem
+  min-height: 100%
+
