Remove redundant props from html

--- a/wishlist/src/app/home.module/pagination/pagination.component.html
+++ b/wishlist/src/app/home.module/pagination/pagination.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <nav aria-label="Page navigation example">
+      <nav>
         <ul class="pagination justify-content-end">
 
           <li class="page-item" [class.disabled]="!showBackward">
