Add confirm purchase behavior

--- a/wishlist/src/app/home.module/header/header.component.html
+++ b/wishlist/src/app/home.module/header/header.component.html
@@ -24,6 +24,6 @@
 
   </div>
   <div class="modal-footer justify-content-center">
-    <button type="button" class="btn btn-danger">Confirm purchase</button>
+    <button type="button" class="btn btn-danger" (click)="confirmPurchase()">Confirm purchase</button>
   </div>
 </ng-template>
